# serasa_challenge

./: .env  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
scripts/: start-lint.sh  start.sh
serasa_challenge/: configs.py  main.py
serasa_challenge/api/v1/: router.py
serasa_challenge/api/v1/endpoints/taxi_fare/: router.py
serasa_challenge/commands/: bulk_create_taxi_fares.py
serasa_challenge/db/: base.py  deps.py  models.py  schemas.py
serasa_challenge/db/migrations/: env.py
serasa_challenge/db/migrations/versions/: af569a8cca8a_initial.py
tests/: conftest.py  test.parquet
tests/api/endpoints/: test_taxi_fare.py
tests/commands/: test_bulk_create_taxi_fare.py
